<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    app:cardCornerRadius="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:background="@color/white"
        android:paddingTop="15dp">

        <com.vyndsolutions.vyndteam.utils.TextStyle.LatoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/categorie"
            android:textAllCaps="true"
            android:textColor="@color/gray_3"
            android:textSize="16sp"
            app:fonttype="bold" />




        <com.vyndsolutions.vyndteam.utils.TextStyle.LatoTextView
            android:id="@+id/tv_retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:text="@string/retour"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp" />


        <View
            android:id="@+id/view_separate"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_retour"
            android:layout_marginTop="9dp"
            android:background="@color/gray_0" />

        <com.vyndsolutions.vyndteam.utils.TextStyle.LatoTextView
            android:id="@+id/label_tt_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@+id/view_separate"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="9dp"
            android:text="@string/ttcategorie"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fonttype="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_category_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_confirm"
            android:layout_below="@+id/label_tt_categories"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp" />

        <com.vyndsolutions.vyndteam.utils.TextStyle.LatoTextView
            android:id="@+id/tv_confirm"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"

            android:text="@string/button_confirm"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />


    </RelativeLayout>
</android.support.v7.widget.CardView>