<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOrdianryBackground"
    android:orientation="vertical"
    tools:context="com.vyndsolutions.vyndteam.activities.LoginActivity">

        <include

            android:id="@+id/app_bar_login"
            layout="@layout/app_bar_login" />


    <EditText
        android:layout_below="@+id/app_bar_login"
        android:id="@+id/et_email_adress"
        android:layout_width="match_parent"
        android:layout_marginLeft="85dp"
        android:layout_centerHorizontal="true"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email_adress"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/textColorHint"
        android:textSize="16sp"
        android:theme="@style/Theme.App.Edittext" />

    <EditText
        android:layout_below="@id/et_email_adress"
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="85dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/textColorHint"
        android:textSize="16sp"
        android:theme="@style/Theme.App.Edittext" />

    <com.dx.dxloadingbutton.lib.LoadingButton
        android:layout_width="match_parent"

        android:layout_height="50dp"
        android:id="@+id/LoadingButton"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        app:lb_btnColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:layout_below="@id/et_password"

        app:lb_btnText="@string/connexion" />

    <View
        android:id="@+id/animate_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:visibility="invisible" />



</RelativeLayout>
