<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    app:cardCornerRadius="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:background="@color/white"
        android:paddingTop="15dp">

        <com.vyndsolutions.vyndteam.utils.TextStyle.LatoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/label_region"
            android:textColor="@color/gray_3"
            android:textSize="16sp"
            app:fonttype="bold" />


        <com.vyndsolutions.vyndteam.utils.TextStyle.LatoTextView
            android:id="@+id/tv_retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:text="@string/retour"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp" />


        <View
            android:id="@+id/view_separate"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_retour"
            android:layout_marginTop="9dp"
            android:background="@color/gray_0" />

        <com.vyndsolutions.vyndteam.utils.TextStyle.LatoTextView
            android:id="@+id/label_tunis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_separate"
            android:foreground="?attr/selectableItemBackground"
            android:paddingBottom="10dp"
            android:paddingLeft="18dp"
            android:paddingTop="17dp"
            android:text="Grand tunis"
            android:visibility="gone"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_category_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_tunis"
            android:overScrollMode="never" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_region_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_region_place"
            android:layout_centerInParent="true"
            android:layout_marginRight="50dp"
            android:visibility="gone"
            app:cardBackgroundColor="@color/gray_0"
            app:cardElevation="5dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_region_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="1dp"
                android:background="@color/white"
                android:padding="3dp" />

        </android.support.v7.widget.CardView>

        <com.vyndsolutions.vyndteam.utils.TextStyle.LatoEditText
            android:id="@+id/tv_region_place"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_below="@+id/rv_category_list"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edit_text_white"
            android:hint="Chercher une région"
            android:paddingLeft="10dp"
            android:textSize="12sp" />

        <com.vyndsolutions.vyndteam.utils.TextStyle.LatoTextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_region_place"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/button_confirm"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>