<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.vyndsolutions.vyndteam.activities.PhotosGridActivity">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progressBarPhoto"
        android:visibility="gone" />
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
                <com.vyndsolutions.vyndteam.widgets.images.NetworkImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_return"
                android:id="@+id/iv_back"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:layout_alignParentLeft="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
                <com.vyndsolutions.vyndteam.widgets.images.NetworkImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_alignParentRight="true"
                    android:id="@+id/iv_add_photo"
                    android:src="@drawable/ic_add_photo_white"/>


            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/layout_emty_menu_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >

        <com.vyndsolutions.vyndteam.utils.TextStyle.LatoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/emptyphoto"
            android:textColor="@color/bleub"
            android:textSize="18sp"
            app:fonttype="regular" />

        <com.vyndsolutions.vyndteam.utils.TextStyle.LatoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/emptymenupphoto"
            android:textColor="@color/bleub"
            android:textSize="18sp"
            app:fonttype="regular" />

        <RelativeLayout
            android:id="@+id/rl_layout_add_photo"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginBottom="19dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/background_border_photo">

            <com.vyndsolutions.vyndteam.widgets.images.NetworkImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/lbl_add_photo_menu_add"
                android:src="@drawable/ic_add_photo_grey" />

            <com.vyndsolutions.vyndteam.utils.TextStyle.LatoTextView
                android:id="@+id/lbl_add_photo_menu_add"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_photo_categorie"

                android:textAllCaps="true"
                android:textColor="@color/gray_2"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="8dp"
        android:id="@+id/grid_content"


        >
        <GridView

            android:id="@+id/gridview_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"

            android:columnWidth="150dp"
            android:numColumns="2"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:id="@+id/layout_pager"
        android:visibility="gone"

        >
        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blackblack"
            android:id="@+id/view_pager_photo"/>
        <android.support.design.widget.TabLayout
            android:background="@color/colorPrimary"
            android:id="@+id/tabDots"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            />
        <RelativeLayout
            android:background="@color/transparent_black"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:id="@+id/layout_delete_bar"
            android:layout_alignParentBottom="true">
            <RelativeLayout
                android:layout_marginTop="-5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/rl_delete_photo">
                <com.vyndsolutions.vyndteam.widgets.images.NetworkImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/iv_delete_photo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_delete_white"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="Supprimer"
                    android:textSize="12sp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/iv_delete_photo"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>
